kube/deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashbang
  labels:
    app: hashbang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashbang
  template:
    metadata:
      labels:
        app: hashbang
    spec:
      containers:
      - name: hashbang
        image: arctair/hashbang
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hashbang
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: hashbang
